--- a/src/my-local.cfg
+++ b/src/my-local.cfg
@@ -3,4 +3,4 @@ host:   127.0.0.1
 port:   2022
 user:   zakhar
 passwd: Ubuntu5
-statePath: /home/zakhar/diagnost.txt
+statePath: /home/zakhar/vbu.state.txt
